Revision history for Perl extension CDB_File.

1.03 - Todd Rinaldo <toddr@cpan.org> 2020-11-13
- Fix incompatibility with CDB files due to accidental algorithm change.
- Add xt tests for 0.96 databases to assure this does not happen again.

1.02 - Todd Rinaldo <toddr@cpan.org> 2020-01-29
- Invoke new as a class method in docs and practice.
- Add support for COW PVs when returning key values. This will hopefully
  deduplicate returned strings where possible.
- Adjust tests to skip exists tests on 5.8.1, not 5.6.2
- Optimize cdb_hashadd as a inline macro
- Croak if atomic re-write from the temp to the final file fails.

1.01 - Todd Rinaldo <toddr@cpan.org> 2020-01-27
- Fix MANIFEST so Changelog is shpped.
- Address file descriptor leak in CDB_File.

1.00 - Todd Rinaldo <toddr@cpan.org> 2020-01-19
- Enable github actions for automated testing
- Switch to github issues.

0.99 - J. Nick Koston <bdraco@cpan.org> 2016-07-16
- Add a fetch_all function for 1:1 hash mapping

0.98 - Todd Rinaldo <toddr@cpan.org> 2015-06-30
- Replace use vars with our (deprecated since 5.6.0)
- Switch from Dynaloader to XSLoader as it's known to be a lower memory profile module.

0.97_01 - Todd Rinaldo <toddr@cpan.org> 2011-04-05
- Put ppport.h back in with an updated version.
- ppport.h warnings now indicate that the module is not perl 5.6 compatible,
  but the test suite continues to succeed there. p5p suggests dropping support
  for 5.6

0.97 - Todd Rinaldo <toddr@cpan.org> 2011-04-05
- CPAN testers looks relativley clean. Publishing a stable version.

0.96_02 - Todd Rinaldo <toddr@cpan.org> 2011-04-03
- Perl 5.6 doesn't warn about $x{undef}. Skip this test for 5.6

0.96_01 - Todd Rinaldo <toddr@cpan.org> 2011-04-01
- Remove ppport.h from distro on reccommendation from ppport.h
- Remove C99 style code from CDB_File to allow GCC 2.95 compilers to work
- Modernize Makefile.PL and require Test::More
- Update tests to use Test::More
- Fix makefile - {'d_mmap'}  isn't always defined